# nodechat

./: .gitignore  AGENT.md  ARCHITECTURE.md  Cargo.toml  DIOXUS_MIGRATION.md  FRONTEND_BACKEND_AUDIT.md  IMPLEMENTATION_ORDER.md  README.md  RULES.md  SLINT_DEMOS_NOTES.md  TODO.md  UI_MIGRATION_MAP.md  build.rs  cargo_check_output.txt  cargo_check_output_2.txt  compiler_output.txt  egui-steps.md  nodechat.db  nodechat.db-shm  nodechat.db-wal  nodechat_local.sqlite  release.keystore  storage_plan.md  test_iroh.rs  version-0.2.0.md
dioxus-version/: Cargo.toml  Dioxus.toml  REWRITE-PLAN.md  tailwind.css
dioxus-version/assets/: main.css  tailwind.css
dioxus-version/src/: helpers.rs  lib.rs  main.rs  mock_data.rs  types.rs
dioxus-version/src/backend/: commands.rs  crypto.rs  events.rs  identity.rs  mod.rs  network.rs  storage.rs
dioxus-version/src/bridge/: mod.rs  spawn.rs
dioxus-version/src/components/: chat_pane.rs  dashboard.rs  diagnostics_tab.rs  info_drawer.rs  lock_screen.rs  mod.rs  modals.rs  onboarding.rs  settings_tab.rs  sidebar.rs
dioxus-version/src/contract/: command.rs  event.rs  mod.rs  types.rs
dioxus-version/src/transport/: direct.rs  group.rs  mod.rs  protocol.rs
docs/: ANDROID_SETUP_LOG.md  BUILD_ANDROID.md  DOCS_PLAN.md  FEEDBACK.md  RULES.md  TODO.md  architecture.md  contributing.md  features.md  index.md  limitations.md  message-lifecycle.md  overview.md  security.md  user-flows.md
docs/architecture/: UI_LAYOUT_GUIDELINES.md  UX_FLOW.md
docs/archive/: BETA_READY.md  FRONTEND_READY_CONTRACT.md  UI_REDUCTION_CHECKLIST.md  ui_overhaul_report.md
hello_android/: Cargo.toml  README.md
hello_android/src/: lib.rs  main.rs
iroh_docs/: compatibility.mdx  docs.json  index.mdx  quickstart.mdx  what-is-iroh.mdx
iroh_docs/.github/workflows/: ci.yml
iroh_docs/about/: changelog.mdx  faq.mdx  roadmap.mdx
iroh_docs/concepts/: discovery.mdx  endpoints.mdx  nat-traversal.mdx  protocols.mdx  relays.mdx  tickets.mdx
iroh_docs/connecting/: creating-endpoint.mdx  custom-relays.mdx  dht-discovery.mdx  dns-discovery.mdx  endpoint-hooks.mdx  gossip.mdx  local-discovery.mdx
iroh_docs/deployment/: dedicated-infrastructure.mdx  metrics.mdx  other-languages.mdx  security-privacy.mdx  troubleshooting.mdx  wasm-browser-support.mdx
iroh_docs/examples/: chat.mdx  examples.mdx
iroh_docs/iroh-services/: access.mdx  index.mdx  projects.mdx  quickstart.mdx  support.mdx
iroh_docs/iroh-services/billing/: control-costs.mdx  faq.mdx  index.mdx  manage-subscription.mdx
iroh_docs/iroh-services/metrics/: custom.mdx  endpoint.mdx  glossary.mdx  how-it-works.mdx  index.mdx
iroh_docs/iroh-services/net-diagnostics/: quickstart.mdx  reports.mdx  usage.mdx
iroh_docs/iroh-services/relays/: index.mdx  managed.mdx  public.mdx
iroh_docs/protocols/: automerge.mdx  blobs.mdx  kv-crdts.mdx  rpc.mdx  streaming.mdx  using-quic.md  writing-a-protocol.mdx
iroh_docs/snippets/: relay-endpoint-config.mdx
iroh_docs/transports/: bluetooth.mdx  nym.mdx  tor.mdx
nodechat-new/: ARCHITECTURE_AND_WORKFLOW.md  Cargo.toml  FEADBACK.md  NEW_UI_FOUNDATION_PLAN.md  SLINT_UI_DOCS_NOTES.md  TODO.md  build_android.sh  compiler_output.txt
nodechat-new/docs/: bug_report.md  contributing.md  feature_request.md
nodechat-new/scratch/: check_db.rs
nodechat-new/src/: backend.rs  bridge.rs  contract.rs  crypto.rs  lib.rs  main.rs  mock_backend.rs  ui.rs  ui_models.rs
nodechat-new/src/p2p/: direct.rs  group.rs  mod.rs  protocol.rs
nodechat-new/src/storage/: mod.rs  queries.rs
nodechat-new/ui/: app.slint  theme.slint
nodechat-new/ui/components/: action_row.slint  button.slint  chat_row.slint  composer.slint  confirm_modal.slint  contact_row.slint  debug_view.slint  message_bubble.slint  nav_bar.slint  page_header.slint  page_shell.slint  row_data.slint  vert_scroll.slint
nodechat-new/ui/screens/: about_screen.slint  add_screen.slint  chat_list.slint  chat_view.slint  contacts_screen.slint  create_group.slint  edit_name.slint  info_screen.slint  password_screen.slint  select_contacts.slint  settings_screen.slint  setup_name.slint  splash.slint  welcome.slint
nodechat-old/: .gitignore  AGENT.md  README.md  UX_FLOW.md
nodechat-old/src/: api.rs  lib.rs
nodechat-old/src/core/: mod.rs
nodechat-old/src/ui/: mod.rs
projects/: DELTA_STATE_poly_format.md  another-sample.md  examples.md  internal_notes.md  note.md  ref_links.md  writeup.md
site/: PROJECT_PLAN.md  package.json
site/adapters/cloudflare-pages/: vite.config.ts
site/public/: robots.txt
site/src/: entry.cloudflare-pages.tsx  global.css  root.tsx
site/src/content/: site-content.ts
site/src/routes/: index.tsx  layout.tsx
site/src/routes/about/: index.tsx
site/src/routes/contributing/: index.tsx
site/src/routes/docs/: index.tsx
src/: api_types.rs  backend.rs  bridge.rs  contract.rs  crypto.rs  error.rs  lib.rs  main.rs  notifications.rs  ui.rs  ui_models.rs
src/backend/: commands.rs  events.rs  mod.rs  ops.rs  utils.rs  views.rs
src/core/: commands.rs  mod.rs
src/crypto/: mod.rs
src/p2p/: direct.rs  group.rs  mod.rs  protocol.rs
src/storage/: mod.rs  queries.rs
src/ui/: mod.rs  models.rs
ui/: app.slint  theme.slint
ui/components/: action_row.slint  app_header.slint  base_screen.slint  button.slint  chat_input.slint  composer.slint  confirm_modal.slint  contact_row.slint  conversation_identity_row.slint  debug_view.slint  form_input.slint  group_invite_bubble.slint  message_bubble.slint  nav_bar.slint  page_header.slint  row_data.slint  status_dot.slint  vert_scroll.slint
ui/screens/: about_screen.slint  add_contact.slint  add_screen.slint  change_password.slint  chat_list.slint  chat_view.slint  contact_details.slint  contacts.slint  contacts_screen.slint  conversation_actions.slint  create_group.slint  diagnostics.slint  edit_name.slint  group_view.slint  identity_card.slint  info_screen.slint  password_screen.slint  select_contacts.slint  select_members.slint  settings.slint  settings_screen.slint  setup_name.slint  splash.slint  verify_identity.slint  verify_key.slint  welcome.slint
(+1 files in other folders)
