[package]
name = "NodeChat"
description = "NodeChat — A Secure Decentralized P2P Messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = "=0.97.0"
iroh-gossip = "=0.97.0"
x25519-dalek = "=2.0.1"
chacha20poly1305 = "=0.10.1"
sha2 = "=0.10.8"
rusqlite = "=0.31.0"
tokio = "=1.50.0"
uuid = "=1.8.0"
anyhow = "=1.0.102"
rand = "=0.8.0"
tracing = "=0.1"
tracing-subscriber = "=0.3"
slint = { version = "=1.15.1", features = ["backend-winit"] }

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "=1.15.1", features = ["backend-android-activity-06"] }
android-activity = "0.6.0"

[dependencies.android-activity]
version = "0.6.0"
optional = true

[features]
default = []
android = ["dep:android-activity"]

[build-dependencies]
slint-build = "=1.15.1"

[lib]
name = "nodechat"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "NodeChat"
path = "src/main.rs"

[package.metadata.android]
apk_name = "NodeChat"
label = "NodeChat"
package = "com.nodechat.app"
target_sdk_version = 33
min_sdk_version = 24
resources = "android/res"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "nodechat"
key_alias = "nodechat"
key_password = "nodechat"
