[package]
name = "nodechat-dioxus"
version = "0.1.0"
authors = ["ultimatekristency <ultimatekristency@gmail.com>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }

# --- P2P Transport ---
iroh = "1.0.1"
iroh-gossip = { version = "0.101.0", features = ["net"] }
iroh-tickets = "1.0.0"

# --- Runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "fs", "signal"] }
futures-lite = "2"
async-trait = "0.1"

# --- Storage ---
rusqlite = { version = "0.31", features = ["bundled"] }

# --- Crypto ---
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.9"

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Error Handling ---
anyhow = "1"
thiserror = "2"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# --- Utilities ---
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
