[package]
name = "hello_android"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.92"
publish = false

[lib]
# cdylib is required for Android, rlib is required for linking
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
egui_demo_lib = { version = "0.34" }
egui_extras = { version = "0.34", features = ["default", "image"] }
log = { version = "0.4" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15" }
winit = { version = "0.30", features = ["android-native-activity"] }
android-activity = { path = "vendor/android-activity", features = ["native-activity"] }
eframe = { version = "0.34", default-features = false, features = ["glow", "android-native-activity"] }

[package.metadata.android]
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 24

[package.metadata.android.signing.release]
alias = "androiddebugkey"
path = "/home/kristency/.android/debug.keystore"
keystore_password = "android"
key_password = "android"

[patch.crates-io]
android-activity = { path = "vendor/android-activity" }
