[package]
name = "nodechat-new"
version = "0.1.0"
authors = ["Shedrack Godstime"]
description = "Privacy Focused. Peer-to-Peer."
homepage = "https://nodechat.pages.dev"
repository = "https://github.com/shedrackgodstime/nodechat"

edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow    = "=1.0.102"
rusqlite  = { version = "=0.31.0", features = ["bundled"] }
uuid      = { version = "=1.8.0",  features = ["v4"] }
slint     = { version = "=1.15.1", features = ["backend-winit"] }
open      = "5.3.2"
directories = "6.0.0"

# --- Networking & P2P ---
iroh = "=0.97.0"
iroh-gossip = "=0.97.0"
iroh-tickets = "0.4.0"
tokio = { version = "=1.50.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "io-util"] }
futures-lite = "=1.13.0"
tracing = "=0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
hex = "0.4"
serde_json = "1.0"
x25519-dalek = { version = "=2.0.1", features = ["static_secrets"] }
chacha20poly1305 = "=0.10.1"
sha2 = "=0.10.8"
rand = "0.8.5"

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = { version = "=1.15.1", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "=1.15.1", features = ["backend-android-activity-06"] }
android-activity = "0.6.0"
jni = "0.21.1"
ndk-context = "0.1.1"

[build-dependencies]
slint-build = "=1.15.1"

[package.metadata.android]
apk_name = "NodeChatNew"
label = "NodeChat New"
package = "com.nodechat.app.new"
target_sdk_version = 33
min_sdk_version = 24
resources = "android/res"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[package.metadata.android.application.activity]
launch_mode = "singleTop"
always_retain_task_state = true

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"

[package.metadata.android.signing.release]
path = "../release.keystore"
keystore_password = "nodechat"
key_alias = "nodechat"
key_password = "nodechat"
